[package]
name = "garden-tools"
version = "1.4.0"
edition = "2021"
description = """
Garden grows and cultivates collections of Git trees

Garden lets you define and run commands over collections of configuration-defined
multi-worktree Git environments."""
keywords = ["git", "development", "sandboxes", "vcs", "worktree"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
]
license = "MIT"
readme = "README.md"
homepage = "https://garden-rs.gitlab.io"
documentation = "https://docs.rs/garden-tools/latest/garden"
repository = "https://gitlab.com/garden-rs/garden"
authors = ["David Aguilar <davvid@gmail.com>"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0"
clap = { version = "4.4.17", features = ["derive", "string"] }
clap_complete = "4.4.7"
crossbeam = "0.8.4"
derivative = "2.2.0"
dirs = "5.0.1"
glob = "0.3.1"
indexmap = "2.2"
indextree = "4.6.0"
is-terminal = "0.4.10"
pathdiff = "0.2.1"
rayon = "1.8.0"
rm_rf = "0.6.2"
shellexpand = { version = "3.1.0", features = ["full"] }
shell-words = "1.1.0"
shlex = "1.3.0"
strum = "0.25.0"
strum_macros = "0.25.3"
subprocess = "0.2.9"
thiserror = "1.0.56"
which = "5.0.0"
xdg = "2.5.2"
yaml-rust = { version = "0.7", package = "yaml-rust2" }
yansi = "0.5.1"

[dev-dependencies]
assert_cmd = "2.0.13"
function_name = "0.3.0"

[lib]
name = "garden"

[[bin]]
name = "garden"
doc = false
test = false
