[package]
name = "garden-tools"
version = "1.9.1"
edition = "2021"
description = """
Garden grows and cultivates collections of Git trees

Garden lets you define and run commands over collections of configuration-defined
multi-worktree Git environments."""
keywords = ["git", "development", "sandboxes", "vcs", "worktree"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
]
license = "MIT"
readme = "README.md"
homepage = "https://garden-rs.gitlab.io"
documentation = "https://docs.rs/garden-tools/latest/garden"
repository = "https://gitlab.com/garden-rs/garden"
authors = ["David Aguilar <davvid@gmail.com>"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "string"] }
clap_complete = "4.5"
crossbeam = "0.8"
dirs = "5.0"
glob = "0.3"
indexmap = "2.6"
indextree = "4.7"
is-terminal = "0.4"
pathdiff = "0.2"
rayon = "1.10"
rm_rf = "0.6.2"
shellexpand = { version = "3.1", features = ["full"] }
shell-words = "1.1"
shlex = "1.3.0"
strum = "0.26"
strum_macros = "0.26"
subprocess = "0.2"
thiserror = "1.0"
which = "6.0"
xdg = "2.5"
yaml-rust = { version = "0.9", package = "yaml-rust2" }
yansi = "1.0"

[dev-dependencies]
assert_cmd = "2.0.13"
function_name = "0.3.0"

[lib]
name = "garden"

[[bin]]
name = "garden"
doc = false
test = false

[profile.release]
debug = 1

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

# This is the main way to strip binaries in the deb package created by
# 'cargo deb'. For other release binaries, we (currently) call 'strip'
# explicitly in the release process.
[profile.deb]
inherits = "release"
debug = false

[package.metadata.deb]
name = "garden"
section = "utils"
assets = [
  ["target/release/garden", "usr/bin/", "755"],
  ["LICENSE", "usr/share/doc/garden/", "644"],
  ["doc/src/changelog.md", "usr/share/doc/garden/CHANGELOG.md", "644"],
  ["README.md", "usr/share/doc/garden/README.md", "644"],
  ["pkg/deb/userguide/*", "usr/share/doc/garden/userguide/", "644"],
  ["pkg/deb/userguide/css/*", "usr/share/doc/garden/userguide/css/", "644"],
  ["pkg/deb/userguide/examples/*", "usr/share/doc/garden/userguide/examples/", "644"],
  ["pkg/deb/userguide/examples/command-interpreters/*", "usr/share/doc/garden/userguide/examples/command-interpreters/", "644"],
  ["pkg/deb/userguide/examples/git-cola/*", "usr/share/doc/garden/userguide/examples/git-cola/", "644"],
  ["pkg/deb/userguide/examples/node/*", "usr/share/doc/garden/userguide/examples/node/", "644"],
  ["pkg/deb/userguide/examples/photo-restoration/*", "usr/share/doc/garden/userguide/examples/photo-restoration/", "644"],
  ["pkg/deb/userguide/examples/python/*", "usr/share/doc/garden/userguide/examples/python/", "644"],
  ["pkg/deb/userguide/FontAwesome/css/*", "usr/share/doc/garden/userguide/FontAwesome/css/", "644"],
  ["pkg/deb/userguide/FontAwesome/fonts/*", "usr/share/doc/garden/userguide/FontAwesome/fonts/", "644"],
  ["pkg/deb/completion/garden.bash", "usr/share/bash-completion/completions/garden", "644"],
  ["pkg/deb/completion/garden.fish", "usr/share/fish/vendor_completions.d/garden.fish", "644"],
  ["pkg/deb/completion/_garden", "usr/share/zsh/vendor-completions/", "644"],
]
extended-description = """\
Garden helps you define development workflows that operate over collections of
self-contained and inter-dependent Git worktrees.
"""
