[workspace]
members = ["gui"]
package.authors = ["David Aguilar <davvid@gmail.com>"]
package.categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
]
package.documentation = "https://docs.rs/garden-tools/latest/garden"
package.edition = "2021"
package.homepage = "https://garden-rs.gitlab.io"
package.keywords = ["git", "development", "sandboxes", "vcs", "worktree"]
package.license = "MIT"
package.readme = "README.md"
package.repository = "https://gitlab.com/garden-rs/garden"
package.version = "2.1.0"

[workspace.dependencies]
garden-tools = { path = ".", version = "2.1.0" }
anyhow = "1.0"
assert_cmd = "2.0.13"
better_default = "1.0"
clap = { version = "4.5", features = ["cargo", "derive", "string"] }
clap-cargo = "0.15"
clap_complete = "4.5"
crossbeam = "0.8"
dirs = "6.0"
dunce = "1.0"
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"
function_name = "0.3.0"
fuzzy-matcher = "0.3.7"
glob = "0.3"
indexmap = "2.6"
indextree = "4.7"
is-terminal = "0.4"
# mime_guess2 used by egui_extras is pinned to keep the 1.81.0 MSRV
mime_guess2 = "=2.0.5"
pathdiff = "0.2"
rayon = "1.10"
rm_rf = "0.6.2"
serde = { version = "1", features = ["derive"] }
shellexpand = { version = "3.1", features = ["full"] }
shell-words = "1.1"
shlex = "1.3.0"
strum = "0.27"
strum_macros = "0.27"
subprocess = "0.2"
thiserror = "2.0"
which = "7.0"
xdg = "3.0"
yaml-rust = { version = "0.10", package = "yaml-rust2" }
yansi = "1.0"

[package]
name = "garden-tools"
description = """
Garden grows and cultivates collections of Git trees

Garden lets you define and run commands over collections of configuration-defined
multi-worktree Git environments."""

rust-version = "1.74.0"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow.workspace = true
better_default.workspace = true
clap.workspace = true
clap-cargo.workspace = true
clap_complete.workspace = true
crossbeam.workspace = true
dirs.workspace = true
dunce.workspace = true
glob.workspace = true
indexmap.workspace = true
indextree.workspace = true
is-terminal.workspace = true
pathdiff.workspace = true
rayon.workspace = true
rm_rf.workspace = true
shellexpand.workspace = true
shell-words.workspace = true
shlex.workspace = true
strum.workspace = true
strum_macros.workspace = true
subprocess.workspace = true
thiserror.workspace = true
which.workspace = true
xdg.workspace = true
yaml-rust.workspace = true
yansi.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
function_name.workspace = true

[lib]
name = "garden"

[[bin]]
name = "garden"
doc = false
test = false

[profile.release]
debug = 1

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

# This is the main way to strip binaries in the deb package created by
# 'cargo deb'. For other release binaries, we (currently) call 'strip'
# explicitly in the release process.
[profile.deb]
inherits = "release"
debug = false

[package.metadata.deb]
name = "garden"
section = "utils"
assets = [
  ["target/release/garden", "usr/bin/", "755"],
  ["LICENSE", "usr/share/doc/garden/", "644"],
  ["doc/src/changelog.md", "usr/share/doc/garden/CHANGELOG.md", "644"],
  ["README.md", "usr/share/doc/garden/", "644"],
  ["pkg/deb/userguide/*", "usr/share/doc/garden/userguide/", "644"],
  ["pkg/deb/userguide/css/*", "usr/share/doc/garden/userguide/css/", "644"],
  ["pkg/deb/userguide/examples/*", "usr/share/doc/garden/userguide/examples/", "644"],
  ["pkg/deb/userguide/examples/command-interpreters/*", "usr/share/doc/garden/userguide/examples/command-interpreters/", "644"],
  ["pkg/deb/userguide/examples/git-cola/*", "usr/share/doc/garden/userguide/examples/git-cola/", "644"],
  ["pkg/deb/userguide/examples/node/*", "usr/share/doc/garden/userguide/examples/node/", "644"],
  ["pkg/deb/userguide/examples/photo-restoration/*", "usr/share/doc/garden/userguide/examples/photo-restoration/", "644"],
  ["pkg/deb/userguide/examples/python/*", "usr/share/doc/garden/userguide/examples/python/", "644"],
  ["pkg/deb/userguide/FontAwesome/css/*", "usr/share/doc/garden/userguide/FontAwesome/css/", "644"],
  ["pkg/deb/userguide/FontAwesome/fonts/*", "usr/share/doc/garden/userguide/FontAwesome/fonts/", "644"],
  ["pkg/deb/completion/garden.bash", "usr/share/bash-completion/completions/garden", "644"],
  ["pkg/deb/completion/garden.fish", "usr/share/fish/vendor_completions.d/garden.fish", "644"],
  ["pkg/deb/completion/_garden", "usr/share/zsh/vendor-completions/", "644"],
]
extended-description = """\
Garden helps you define development workflows that operate over collections of
self-contained and inter-dependent Git worktrees.
"""
