[package]
name = "garden-gui"
description = "Garden graphical user interface"
rust-version = "1.81.0"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap-cargo.workspace = true
crossbeam.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
fuzzy-matcher.workspace = true
garden-tools.workspace = true
idna_adapter.workspace = true  # pinned for MSRV
mime_guess2.workspace = true  # pinned for MSRV
serde = { workspace = true, optional = true }
shell-words.workspace = true

[[bin]]
name = "garden-gui"

[lib]
name = "garden_gui"
doc = false
test = false

[features]
serde = ["dep:serde", "egui/persistence"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.deb]
name = "garden-gui"
section = "utils"
assets = [
  ["target/release/garden-gui", "usr/bin/", "755"],
  ["../LICENSE", "usr/share/doc/garden-gui/", "644"],
  ["../README.md", "usr/share/doc/garden-gui/", "644"],
]
extended-description = """\
Garden GUI is a graphical user interface for Garden.
https://crates.io/crates/garden-tools
"""
