[package]
name = "garden-gui"
description = "Garden graphical user interface"
rust-version = "1.81.0"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_autocomplete= "10.2.0"
egui_extras = "0.31"
fuzzy-matcher = "0.3.7"
mime_guess2 = "=2.0.5"  # (egui_extras) pinned for MSRV
idna_adapter = "=1.2.0"  # (egui) pinned for MSRV
anyhow.workspace = true
clap.workspace = true
clap-cargo.workspace = true
crossbeam.workspace = true
garden-tools.workspace = true
serde = { workspace = true, optional = true }
shell-words.workspace = true

[[bin]]
name = "garden-gui"

[lib]
name = "garden_gui"
doc = false
test = false

[features]
serde = ["dep:serde", "egui/persistence"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.deb]
name = "garden-gui"
section = "utils"
assets = [
  ["target/release/garden-gui", "usr/bin/", "755"],
  ["../LICENSE", "usr/share/doc/garden-gui/", "644"],
  ["../README.md", "usr/share/doc/garden-gui/", "644"],
]
extended-description = """\
Garden GUI is a graphical user interface for Garden.
https://crates.io/crates/garden-tools
"""
