[package]
name = "garden-gui"
description = "Garden grows and cultivates Git trees, GUI edition"
rust-version = "1.86.0"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
eframe = "0.32"
egui = "0.32"
egui_autocomplete= "11.0"
egui_extras = "0.32"
anyhow.workspace = true
clap.workspace = true
clap-cargo.workspace = true
crossbeam.workspace = true
garden-tools.workspace = true
serde = { workspace = true, optional = true }
shell-words.workspace = true

[[bin]]
name = "garden-gui"

[lib]
name = "garden_gui"
doc = false
test = false

[features]
serde = ["dep:serde", "egui/persistence"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.deb]
name = "garden-gui"
section = "utils"
assets = [
  ["target/release/garden-gui", "usr/bin/", "755"],
  ["../LICENSE", "usr/share/doc/garden-gui/", "644"],
  ["../README.md", "usr/share/doc/garden-gui/", "644"],
]
extended-description = """\
Garden GUI is a graphical user interface for Garden.
https://crates.io/crates/garden-tools
"""

[package.metadata.generate-rpm]
assets = [
    { source = "target/x86_64-unknown-linux-gnu/pkg/garden-gui", dest = "/usr/bin/", mode = "755" },
    { source = "../LICENSE", dest = "/usr/share/doc/garden-gui/", mode = "644", doc = true },
    { source = "../README.md", dest = "/usr/share/doc/garden-gui/", mode = "644", doc = true },
]
